# A-B_Test_ML

./: main.py  pyproject.toml
project_2_abtest/: .dockerignore  LECTURE_NOTES.md  README.md
project_2_abtest/backend/: .coverage  app.py  config.py  pyproject.toml
project_2_abtest/backend/models/: experiment.py  result.py
project_2_abtest/backend/routes/: experiments.py  power_analysis.py  results.py
project_2_abtest/backend/schemas/: __init__.py  experiment.py  result.py
project_2_abtest/backend/services/: correction.py  power.py  statistics.py
project_2_abtest/backend/tests/: test_correction.py  test_power.py  test_statistics.py
project_2_abtest/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
project_2_abtest/frontend/: app.py  pyproject.toml
project_2_abtest/frontend/components/: api_client.py
project_2_abtest/frontend/pages/: 02_run_test.py  03_power_analysis.py  04_results_history.py  05_model_comparison.py  06_documentation.py
