[project]
name = "abtest-backend"
version = "1.0.0"
description = "A/B Testing Framework Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.3",
    "scipy>=1.11.4",
    "matplotlib>=3.8.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
